// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works 1`] = `
Object {
  "blocks": Array [
    Object {
      "text": "kyoko kyoko toshino.",
      "type": "text",
    },
  ],
  "ok": true,
}
`;

exports[`works 2`] = `
Object {
  "blocks": Array [
    Object {
      "text": "私は",
      "type": "text",
    },
    Object {
      "name": "poke",
      "texts": Array [
        "ゼニガメ",
        "ヒトカゲ",
        "フシギダネ",
      ],
      "type": "select",
    },
    Object {
      "text": "を選んだ",
      "type": "text",
    },
  ],
  "ok": true,
}
`;

exports[`works 3`] = `
Object {
  "blocks": Array [
    Object {
      "text": "my name is ",
      "type": "text",
    },
    Object {
      "name": "name",
      "type": "input",
    },
    Object {
      "text": ".",
      "type": "text",
    },
  ],
  "ok": true,
}
`;

exports[`works 4`] = `
Object {
  "blocks": Array [
    Object {
      "name": "ア",
      "texts": Array [
        "a",
        "b",
      ],
      "type": "select",
    },
    Object {
      "name": "a",
      "type": "input",
    },
  ],
  "ok": true,
}
`;

exports[`works 5`] = `
Object {
  "blocks": Array [
    Object {
      "name": "ア*",
      "texts": Array [
        "a",
        "b",
      ],
      "type": "select-repeat",
    },
    Object {
      "name": "a",
      "type": "input",
    },
  ],
  "ok": true,
}
`;
